--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
 /></noscript>
 <!-- End Meta Pixel Code -->
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G417WDWGFQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G417WDWGFQ');
+</script>
+    
   </head>
   <body>
     
